--- a/galeria.html
+++ b/galeria.html
@@ -1,7 +1,7 @@
 <!DOCTYPE hfont-familytml>
     <html>
         <head>
-          <title>Wikigirls.com</title>
+          <title>Kiwi.com</title>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -19,7 +19,7 @@
         <body>
             <div class="topnav">
                 <div class="menu">
-                  <a class="active" href="index.html">Wikigirls.com
+                  <a class="active" href="index.html">Kiwi.com
                     <i class="fa-solid fa-desktop"></i>
                   </a>
       
