--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Wikigirls.com</title>
+        <title>Kiwi.com</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -18,7 +18,7 @@
     <body>
         <div class="topnav">
           <div class="menu">
-            <a class="active" href="index.html">Wikigirls.com
+            <a class="active" href="index.html">Kiwi.com
               <i class="fa-solid fa-desktop"></i>
             </a>
 
@@ -49,8 +49,8 @@
 
           <div class="center">
             <div class="principal">
-              <h3>Wikigirls.com</h3>
-              <p class="parag">O wikigirls veio para tornar as informações do seu personagem favorito mais praticas de acessar. Além disso te mantem informado sobre as novidades que existem sobre o ator que atua na serie ou filme favorito, contamos com galeria de fotos( sobre seu filme desejado), cards de personagens, iframes e muito mais. O que está esperando? Crie uma conta em nossa pagina e se divirta com o que ela pode te proporcionar.</p>
+              <h3>Kiwi.com</h3>
+              <p class="parag">O Kiwi.com veio para tornar as informações do seu personagem favorito mais praticas de acessar. Além disso te mantem informado sobre as novidades que existem sobre o ator que atua na serie ou filme favorito, contamos com galeria de fotos( sobre seu filme desejado), cards de personagens, iframes e muito mais. O que está esperando? Crie uma conta em nossa pagina e se divirta com o que ela pode te proporcionar.</p>
             </div>
 
             <img src="img/wiki/mulher (2).jpg" class="img-center">
@@ -59,7 +59,7 @@
 
           <div class="box">
             <div class="texto">
-              <p class="parag">O wikigirls repressenta a voz dos fãs e todos que acompanham nosso site podendo trazer entreterimento e diversão. Onde você expressa sua opinião e compartilha ideias.</p>
+              <p class="parag">O Kiwi.com repressenta a voz dos fãs e todos que acompanham nosso site podendo trazer entreterimento e diversão. Onde você expressa sua opinião e compartilha ideias.</p>
 
               <center>
                 <i class="fa-solid fa-pencil icon-parag"></i>
