--- a/wiki.html
+++ b/wiki.html
@@ -104,12 +104,12 @@
                 
                 <a href="index.html">
                 <button type="button" style="width: 280px; height:35px; margin: 18px;  background-color: #BF4E83 ; font-size: 18px; color: #F3D500;" onclick="Evento()">ASSISTIR AGORA
-                <img src="img/wiki/icons8-programa-de-tv-25.png">
+                  <i class="fa-regular fa-circle-play"></i>
                 </button></a>
                 <br><br><br><br>
 
                 <a href="https://www.primevideo.com">
-              <img src="img/wiki/prime.png" style=" width: 100px; display: inline-block;">
+                  <img src="img/wiki/prime.png" style=" width: 100px; display: inline-block;">
                 </a>
 
                 <a href="https://globoplay.globo.com/">
@@ -121,38 +121,38 @@
               </a>
 
                 <a href="https://www.papodecinema.com.br/filmes/meninas-malvadas/">
-                <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
-                  <img src="img/wiki/icons8-papel-25.png" style="width: 45px;">
-                  Creditos
-                </button>
+                  <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
+                    <img src="img/wiki/icons8-papel-25.png" style="width: 45px;">
+                    Creditos
+                  </button>
                 </a>
                 <a href="https://www.google.com/search?q=Meninas+Malvadas&sxsrf=ALiCzsZ2gJ0W-259Au392WVDjLkHOWI_jw:1669765612144&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjr4q3RydT7AhW1IbkGHcbpClkQ_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">
                   <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
                     <img src="img/wiki/icons8-galeria-de-imagens-25.png" style="width: 48px;">
                     Fotos
                   </button>
-                  </a>
+                </a>
 
                   <a href="https://www.youtube.com/results?search_query=meninas+malvadas">
                     <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
                       <img src="img/wiki/icons8-botão-_play_-dentro-de-um-círculo-45.png" style="width: 48px;">
                       Videos
                     </button>
-                    </a>
+                  </a>
 
                     <a href="">
                       <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
                         <img src="img/wiki/icons8-ponto-de-interrogação-45.png" style="width: 48px;">
                         Dúvidas
                       </button>
-                      </a>
+                    </a>
 
                       <a href="https://cinebuzz.uol.com.br/noticias/vitrine/11-curiosidades-sobre-o-filme-meninas-malvadas-que-voce-nao-sabia.phtml">
                         <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 15px;" onclick="Evento()">
                           <img src="img/wiki/icons8-pesquisar-45.png" style="width: 48px;">
                           Curiosidades
                         </button>
-                        </a>
+                      </a>
 
 
                 <div class="div" style="width: 1300px; padding: 10px;">
