--- a/wiki.html
+++ b/wiki.html
@@ -55,16 +55,16 @@
 
               <a href="index.html">
               <button type="button" style="float:right; color: #BF4E83; background-color: aliceblue; width: 130px; font-size: 13px; " onclick="Evento()">Escrever critica
-              <img src="img/wiki/icons8-lápis-25.png"style="width: 18px;">
+              <img src="img/wiki/caneta.png"style="width: 18px;">
               </button>
               </a>
               <a href="index.html">
               <button type="button" style="float: right; color: #BF4E83; background-color: aliceblue; width: 80px; font-size: 15px;" onclick="Evento()">Ver
-              <img src="img/wiki/icons8-webpage-scrolling-up-25.png" style="width: 20px;">
+              <img src="img/wiki/salvar.png" style="width: 20px;">
               </button>
               </a>
               <button type="button" style="float: right; color: #BF4E83; background-color: aliceblue; width: 70px; font-size: 15px;" onclick="Evento()">
-                <img src="img/wiki/icons8-seta-longa-à-esquerda-25.png" style="width: 15px;">
+                <img src="img/wiki/seta.png" style="width: 15px;">
                 Avalie
               </button>
               
@@ -101,7 +101,7 @@
                 <br>Violencia<br>
                 Titulo Original: Mean Girls<br>
                 </h2>
-                
+                <br><br>
                 <a href="index.html">
                 <button type="button" style="width: 280px; height:35px; margin: 18px;  background-color: #BF4E83 ; font-size: 18px; color: #F3D500;" onclick="Evento()">ASSISTIR AGORA
                   <i class="fa-regular fa-circle-play"></i>
@@ -122,34 +122,34 @@
 
                 <a href="https://www.papodecinema.com.br/filmes/meninas-malvadas/">
                   <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
-                    <img src="img/wiki/icons8-papel-25.png" style="width: 45px;">
+                    <img src="img/wiki/papel.png" style="width: 45px;">
                     Creditos
                   </button>
                 </a>
                 <a href="https://www.google.com/search?q=Meninas+Malvadas&sxsrf=ALiCzsZ2gJ0W-259Au392WVDjLkHOWI_jw:1669765612144&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjr4q3RydT7AhW1IbkGHcbpClkQ_AUoAXoECAEQAw&biw=1366&bih=657&dpr=1">
                   <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
-                    <img src="img/wiki/icons8-galeria-de-imagens-25.png" style="width: 48px;">
+                    <img src="img/wiki/fotos.png" style="width: 48px;">
                     Fotos
                   </button>
                 </a>
 
                   <a href="https://www.youtube.com/results?search_query=meninas+malvadas">
                     <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
-                      <img src="img/wiki/icons8-botão-_play_-dentro-de-um-círculo-45.png" style="width: 48px;">
+                      <img src="img/wiki/videos.png" style="width: 48px;">
                       Videos
                     </button>
                   </a>
 
                     <a href="">
                       <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 20px;" onclick="Evento()">
-                        <img src="img/wiki/icons8-ponto-de-interrogação-45.png" style="width: 48px;">
+                        <img src="img/wiki/ponto.png" style="width: 48px;">
                         Dúvidas
                       </button>
                     </a>
 
                       <a href="https://cinebuzz.uol.com.br/noticias/vitrine/11-curiosidades-sobre-o-filme-meninas-malvadas-que-voce-nao-sabia.phtml">
                         <button type="button" style="float: right; color: #731F5C; background-color: #F2C2CF; width: 80px; height: 100px; margin: 10px; border: 0px; font-size: 15px;" onclick="Evento()">
-                          <img src="img/wiki/icons8-pesquisar-45.png" style="width: 48px;">
+                          <img src="img/wiki/lupa.png" style="width: 48px;">
                           Curiosidades
                         </button>
                       </a>
