--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p class="parag">O Kiwi.com veio para tornar as informações do seu personagem favorito mais praticas de acessar. Além disso te mantem informado sobre as novidades que existem sobre o ator que atua na serie ou filme favorito, contamos com galeria de fotos( sobre seu filme desejado), cards de personagens, iframes e muito mais. O que está esperando? Crie uma conta em nossa pagina e se divirta com o que ela pode te proporcionar.</p>
             </div>
 
-            <img src="img/wiki/mulher (2).jpg" class="img-center">
+            <img src="img/wiki/mulher.jpg" class="img-center">
           </div>
           
 
