--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
             </a>
           </div>
 
+          <a href="#karen">
+            <div class="cards">
+                <img src="img/cards/karen.png" class="card-img">
+                <p>Karen Smith</p>
+            
+            </div>
+          </a>
 
             <form class="search-container">
                 <input type="text" placeholder="Search...">
