--- a/wiki.html
+++ b/wiki.html
@@ -35,7 +35,14 @@
                 </a>
             </div>
   
-  
+            <a href="#karen">
+              <div class="cards">
+                  <img src="img/cards/karen.png" class="card-img">
+                  <p>Karen Smith</p>
+              
+              </div>
+            </a>
+
             <form class="search-container">
                 <input type="text" placeholder="Search...">
                 <button type="submit" class="btt">
