--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
         
         <link rel="stylesheet" href="css/inicial.css">
+        <script src="js/script.js" defer></script>
         <script src="js/funcoes.js" defer></script>
         <script src="index.js" defer></script>
     </head>
@@ -35,12 +36,10 @@
             </a>
           </div>
 
-          <a href="#karen">
-            <div class="cards">
-                <img src="img/cards/karen.png" class="card-img">
-                <p>Karen Smith</p>
-            
-            </div>
+          <a href="#" class="nav_btt">
+            <span class="bar" id="top"></span>
+            <span class="bar" id="center"></span>
+            <span class="bar" id="bottom"></span>
           </a>
 
             <form class="search-container">
@@ -75,7 +74,7 @@
             </div>
 
             <div class="texto">
-              <p class="parag">Expresse suas paixões e evoula. Faça sua propria edição,seu proprio layout e crie sua pagina com o que desejar, gerando criatividade, diversão, evolução e uma nova comunidade para si.</p>
+              <p class="parag">Expresse suas paixões e evolua. Faça sua propria edição,seu proprio layout e crie sua pagina com o que desejar, gerando criatividade, diversão, evolução e uma nova comunidade para si.</p>
 
               <center>
                 <i class="fa-solid fa-link icon-parag"></i>
