--- a/wiki.html
+++ b/wiki.html
@@ -53,7 +53,7 @@
 
 
               <iframe width="680" height="305" src="https://www.youtube.com/embed/EMzEmGfTuM4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <h3>Sinopse</h3>
+              <h3 class="sin">Sinopse</h3>
               <br><br>
               <p><b>A adolescente Cady Heron foi educada na África pelos seus pais cientistas. Quando sua família se muda para o subúrbio, nos Estados Unidos, Cady começa a frequentar a escola pública e recebe uma rápida introdução às leis de popularidade que dividem seus colegas. Sem querer, ela acaba no meio de um grupo de elite de estudantes apelidadas "as poderosas".</p></b>
               <h4>Avaliação</h4>
